# djangoX

./: README.md  pyproject.toml
config/: settings.py  urls.py
djangox2/: apps.py  models.py  tests.py  urls.py  views.py
djangox2/migrations/: 0001_initial.py  0002_game_delete_djangox2.py
templates/: _base.html
templates/djangox2/: game-create.html  game-delete.html  game-detail.html  game-list.html  game-update.html
